--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -1,5 +1,5 @@
-.popup {
-    background-color: rgb(0 0 0 / 0.5);
+popup {
+    background-color: rgb(1 1 1 / 0.5);
     position: fixed;
     left: 0;
     top: 0;
